added portfolio project to repo

--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -1,13 +1,9 @@
-#row-1, #row-2, #row-3 {
-  display: inline;
+* {
+  padding: 0;
+  margin: 0;
 }
-.tictactoe {
+canvas {
   background: darkgrey;
-  height: 287.5px;
-}
-.square {
-  background: lightgrey;
-  height: 94px;
-  margin: 1px 1.5px;
-  width: 32%;
+  display: block;
+  margin: 0 auto;
 }
